# food_notes

./: .env.example  .gitignore  README.md  pyproject.toml
src/: main.py
src/telegram_bot/: bot.py  handlers.py
src/utils/: crud.py  parsing.py
