[project]
name = "food-notes"
version = "0.1.0"
description = ""
authors = [
    {name = "egork",email = "egor.kozh@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "aiogram (>=3.25.0,<4.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "google (>=3.0.0,<4.0.0)",
    "gspread (>=6.2.1,<7.0.0)",
    "google-auth (>=2.48.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
